test/SPI/spi-only-import-conflicting.code
/// Test duplicate and conflicting imports from the same file.

// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Generate dependencies.
// RUN: %target-language-frontend -emit-module %t/Lib.code \
// RUN:   -module-name Lib -emit-module-path %t/Lib.codemodule \
// RUN:   -language-version 5 -enable-library-evolution

/// Build clients.
// RUN: %target-language-frontend -typecheck %t/SPIOnly_Default.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck %t/Default_SPIOnly.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck %t/SPIOnly_Exported.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck %t/Exported_SPIOnly.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck %t/SPIOnly_IOI.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck %t/SPIOnly_IOI_Exported_Default.code -I %t -verify \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck -primary-file %t/SPIOnly_Default_FileA.code \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   %t/SPIOnly_Default_FileB.code -I %t -verify \
// RUN:   -experimental-spi-only-imports -verify
// RUN: %target-language-frontend -typecheck -primary-file %t/IOI_Default_FileA.code \
// RUN:   -language-version 5 -enable-library-evolution \
// RUN:   %t/IOI_Default_FileB.code -I %t -verify \
// RUN:   -experimental-spi-only-imports -verify

//--- Lib.code
// Empty source file for import.

//--- SPIOnly_Default.code
@_spiOnly import Lib // expected-note {{imported for SPI only here}}
import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}

//--- Default_SPIOnly.code
import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
@_spiOnly import Lib // expected-note {{imported for SPI only here}}

//--- SPIOnly_Exported.code
@_spiOnly import Lib // expected-note {{imported for SPI only here}}
@_exported import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}

//--- Exported_SPIOnly.code
@_exported import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
@_spiOnly import Lib // expected-note {{imported for SPI only here}}

//--- SPIOnly_IOI.code
@_spiOnly import Lib // expected-note {{imported for SPI only here}}
// expected-warning @-1 {{'Lib' inconsistently imported as implementation-only}}
@_implementationOnly import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
// expected-note @-1 {{imported as implementation-only here}}
// expected-warning @-2 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}

/// Many confliciting imports lead to many diagnostics.
//--- SPIOnly_IOI_Exported_Default.code
@_spiOnly import Lib // expected-note 3 {{imported for SPI only here}}
// expected-warning @-1 {{'Lib' inconsistently imported as implementation-only}}
@_implementationOnly import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
// expected-note @-1 3 {{imported as implementation-only here}}
// expected-warning @-2 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}
@_exported import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
// expected-warning @-1 {{'Lib' inconsistently imported as implementation-only}}
import Lib // expected-error {{'Lib' inconsistently imported for SPI only}}
// expected-warning @-1 {{'Lib' inconsistently imported as implementation-only}}

/// Different SPI only imports in different files of the same module are accepted.
//--- SPIOnly_Default_FileA.code
@_spiOnly import Lib

//--- SPIOnly_Default_FileB.code
import Lib

/// Different IOI in different files of the same module are still rejected.
//--- IOI_Default_FileA.code
@_implementationOnly import Lib // expected-note {{imported as implementation-only here}}
// expected-warning @-1 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}

//--- IOI_Default_FileB.code
import Lib // expected-warning {{'Lib' inconsistently imported as implementation-only}}
